--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "app",
+  "name": "course_helper",
   "version": "0.1.0",
   "private": true,
+  "description": "XMU Course Helper!",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
