--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -14,6 +14,7 @@ lxml==4.8.0
 nanoid==2.0.0
 pefile==2021.9.3
 Pillow==9.1.0
+psutil==5.9.1
 pydantic==1.9.0
 pyinstaller==5.1
 pyinstaller-hooks-contrib==2022.5
