Modify server starter

--- a/app/package.json
+++ b/app/package.json
@@ -14,10 +14,12 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@wangeditor/editor": "^5.1.1",
+    "@wangeditor/editor-for-vue": "^5.1.11",
+    "@wangeditor/plugin-upload-attachment": "^1.0.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "electron-store": "^8.0.1",
-    "open": "^8.4.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
